[gd_scene load_steps=60 format=2]

[ext_resource path="res://assets/sprites/evilWizard2/Idle.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/evilWizard2/Fall.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/evilWizard2/Attack1.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/evilWizard2/Jump.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/evilWizard2/Run.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/evilWizard2/Death.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/evilWizard2/Attack2.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/evilWizard2/Take hit.png" type="Texture" id=8]
[ext_resource path="res://script/boss.gd" type="Script" id=9]
[ext_resource path="res://assets/specialEffects.tscn" type="PackedScene" id=10]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 250, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 500, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 750, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1000, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1250, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1500, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1750, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1526, 0, 218, 250 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 250, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 250, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 500, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 750, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1000, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1250, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1500, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1750, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 250, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 250, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 500, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 750, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1000, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1250, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1500, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1750, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 250, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 500, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 750, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1000, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1250, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1500, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1750, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 250, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 500, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 250, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 500, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 750, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1000, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1250, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1500, 0, 250, 250 )

[sub_resource type="SpriteFrames" id=48]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "attack2",
"speed": 5.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": true,
"name": "attack1",
"speed": 5.0
}, {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ) ],
"loop": true,
"name": "run",
"speed": 5.0
}, {
"frames": [ SubResource( 38 ), SubResource( 39 ), SubResource( 40 ) ],
"loop": true,
"name": "get_hit",
"speed": 6.0
}, {
"frames": [ SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ) ],
"loop": true,
"name": "death",
"speed": 2.0
} ]

[sub_resource type="RectangleShape2D" id=49]
extents = Vector2( 19.2713, 28.3304 )

[node name="boss" type="KinematicBody2D"]
scale = Vector2( 3, 3 )
collision_layer = 2
collision_mask = 5
script = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 48 )
animation = "idle"
playing = true

[node name="hitBox" type="Area2D" parent="."]
position = Vector2( 2.20486, 14.1741 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitBox"]
shape = SubResource( 49 )

[node name="hitBox_flip_h" type="Area2D" parent="."]
position = Vector2( -2.15557, 14.1741 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitBox_flip_h"]
shape = SubResource( 49 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.421043, 14.1741 )
shape = SubResource( 49 )

[node name="SpecialEffect" parent="." instance=ExtResource( 10 )]

[node name="Tween" type="Tween" parent="."]

[node name="fadeTimer" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="hitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="area_entered" from="hitBox_flip_h" to="." method="_on_HitBox_area_entered"]
[connection signal="timeout" from="fadeTimer" to="." method="_on_fadeTimer_timeout"]
